--- a/src/pages/dashboard/index.less
+++ b/src/pages/dashboard/index.less
@@ -48,6 +48,8 @@
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 0 20px 5px rgba(0, 0, 0, .05);
+  position: relative;
+  z-index: 1;
 }
 
 .header .header-controls {
