--- a/src/pages/dashboard/links/detail/index.less
+++ b/src/pages/dashboard/links/detail/index.less
@@ -12,10 +12,6 @@
   color: #333;
 }
 
-.detail-card {
-  padding: 0 6px;
-}
-
 .detail-card .ant-row {
   margin: .5em 0;
 }
