--- a/src/pages/dashboard/records/detail/index.less
+++ b/src/pages/dashboard/records/detail/index.less
@@ -3,10 +3,6 @@
   overflow-x: auto;
 }
 
-.detail-card {
-  padding: 0 6px;
-}
-
 .detail-card .ant-row {
   margin: .5em 0;
 }
